2007-04-16    <tino@firebird.03.softkill.net>

	* signals.h (tino_sigsuspend): added

2007-04-15    <tino@firebird.03.softkill.net>

	* alloc.h (tino_free_null): added

	* sock.h (tino_sock_error): now this routine is allowed to return
	(as I needed this feature.  Not returning was a miscalculation).
	Also several routines now permit tino_sock_error to return.  (The
	default behavior was not to return, so there shall be no problem
	with old tools of me even if this error function was hooked).
	Note that there is no such thing as a global indicator (like
	errno).  I consider such a thing to be bad (non-threadsafe), and
	therefor you can implement it yourself (by hooking).  Also note
	that tino_sock_error will vanish soon when err.h starts to work.
	
2007-04-14    <tino@firebird.03.softkill.net>

	* arg.h (tino_va_init): added

2007-04-11    <tino@firebird.03.softkill.net>

	* Makefile-test.sh (bugs): added "make bugs" to UNIT_TEST/Makefile
	which is created by "make test".  Also minor output improvements.

	* strprintf.h (tino_str_vprintf_null): now uses functions from
	alloc.h

	* alloc.h (tino_realloc_null, tino_realloc_downsize_null): added
	as there are too many broken things out there: realloc might alter
	pointers even if downsizing.  And be sure that if it fails on
	downsizing the old unharmed buffer is returned.  (Yes, I'm
	paraniod.)
	(tino_malloc): added for hooks

	* sock.h (tino_sock_accept_addr_intr, tino_sock_accept_intr):
	added

	* alarm.h (tino_alarm_is_pending): added as clean interface to
	tino_alarm_pending

2007-04-10    <tino@firebird.03.softkill.net>

	* hup.h: Now uses signals.h, too (and better commented)
	(tino_hup_check, tino_hup_check_if): added
	(tino_hup_handler): prototype changed such that lazy people like
	me cannot forget to enable HUP processing.  Also improved
	usability: The handler now can ignore the default action.  Changes
	to existing programs are small: tino_hup_handler(fn) now becomes